mentor ma messages nu icon add kariyu and pages sarkha kariya

--- a/ASCEND 3/ASCEND 3/ascend-ui/css/components.css
+++ b/ASCEND 3/ASCEND 3/ascend-ui/css/components.css
@@ -133,6 +133,7 @@ textarea.input {
     border-radius: var(--radius-lg);
     resize: vertical;
     min-height: 120px;
+    margin-bottom: 15px;
 }
 
 /* Badges */
